# udemy-course-opengl-lowlevelgamedev

./: CMakeLists.txt  README.md  main.cpp
include/: Shader.h  utilities.h
resources/: myshader.frag  myshader.vert
src/: Shader.cpp
